--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
+    "react-devtools": "^4.24.7",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
