--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~45.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-status-bar": "~1.3.0",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-devtools": "^4.24.7",
     "react-dom": "17.0.2",
