--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-image-picker": "^4.8.4",
+    "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-snap-carousel": "^4.0.0-beta.6",
-    "react-native-table-component": "^1.2.2",
+    "react-native-table-component": "^1.2.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
