--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-native-picker/picker": "2.4.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@rpldy/native-uploady": "^1.0.0",
+    "@rpldy/upload-button": "^1.0.0",
+    "@rpldy/uploady": "^1.0.0",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-app-loading": "~1.3.0",
@@ -23,6 +26,7 @@
     "react-devtools": "^4.24.7",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-document-picker": "^8.1.1",
     "react-native-image-picker": "^4.8.4",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.2.4",
