--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@rpldy/upload-button": "^1.0.0",
     "@rpldy/uploady": "^1.0.0",
     "axios": "^0.27.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-expo": "^9.0.1",
     "expo": "~45.0.0",
     "expo-app-loading": "~1.3.0",
+    "expo-file-system": "^14.0.0",
     "expo-status-bar": "~1.3.0",
     "lodash": "^4.17.21",
     "react": "17.0.2",
@@ -27,16 +30,26 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-document-picker": "^8.1.1",
+    "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^4.8.4",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-table-component": "^1.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "babel-core": "^6.0.20",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.0.15",
+    "webpack": "^1.9.6",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.0.0"
   },
   "private": true
 }
