--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-table-component": "^1.2.0",
     "react-native-web": "0.17.7"
