--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-picker/picker": "2.4.0",
+    "@react-navigation/material-bottom-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@rpldy/native-uploady": "^1.0.0",
@@ -28,12 +29,13 @@
     "react-native": "0.68.2",
     "react-native-document-picker": "^8.1.1",
     "react-native-image-picker": "^4.8.4",
-    "react-native-paper": "^4.12.1",
+    "react-native-paper": "^4.12.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-table-component": "^1.2.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
